Fix spacing issue with request SIT title

--- a/src/shared/StorageInTransit/StorageInTransit.css
+++ b/src/shared/StorageInTransit/StorageInTransit.css
@@ -7,6 +7,11 @@
   margin-top: 20px;
 }
 
+.storage-in-transit-panel-modal .title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 .storage-in-transit-hr-top {
   border-top: 1px solid #f1f1f1;
   margin-top: 1.5em;
